# GolfSimulator

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
pga_sim/: __init__.py  api.py  auth.py  cli.py  config.py  datagolf_client.py  learning.py  models.py  service.py  simulation.py
pga_sim/web/: index.html
pga_sim/web/assets/: app.js  styles.css
tests/: test_auth.py  test_datagolf_client.py  test_learning.py  test_service_dynamic_form.py  test_service_event_selection.py  test_service_historical_parsing.py  test_service_learning.py  test_service_lifecycle.py  test_service_reports.py  test_service_seasonal_form.py  test_service_utils.py  test_simulation.py
